   "beta quality" only.
 - Added Context.setLogger() method. Suggested by Alex Combs.
 - Remove temporarily the WAR support.
 - Added a getTransformer() method to TransformRepresentation to get and customize the underlying XSLT engine. 
   It is currently based on JDK's internal XSLT engine. Suggested by Denis Haskin.

[Enhancements] 
 - Enhanced support of Java SE 4.0 via Retrotranslator.
 - The checking of identifier's secret is deported in a delegated method. Contributed by Valdis Rigdon. 
 - Refactored the build files to extract the Web files to another SVN repository.
 - Add comments describing status codes and methods (from HTTP, Webdav RFC). Suggested by Chuck Hinson.
 - Updated Apache Fileupload to 1.2 and Commons IO to 1.3.1.
 - Clarified the Javadocs for Restlet.init() method.
 
1.0 RC4 (2007-01-26)
[Bugs fixed]
 - Guard.authorize() doesn't call authenticate() anymore as doHandle() was already checking
   this point. Was pontially resulting in two calls to authenticate(). Reported by Vincent Lari.
 - Replaced "RESTlet" by "Restlet" in all logos to match the actual project name.
 - Fixed bug in DomRepresentation's constructor for empty Documents. Reported by David Rauschenbach.
 - Fixed a potential classloader issue with Resin 3.0.19 servlet container. Reported by Denis Haskin.
 - Force sort order for list of representations set by the DirectoryResource.
 - Fixed issue with the "timeout" property (class HTTPUrlConnection) which is not defined in Java 1.4. 
   Reported by Stephan Schmitt. 
 - FileRepresentation(String path) constructor now accepts both simple path names and file URI. 
   Suggested by Sean Landis.
 - Fixed bug with repeated patterns in URI templates. Reported by Vincent Lari.
 - Fixed bugs in some POM files. Reported by Mitchell Stewart.
 - The query need to be reconstruct and appended to the requestURI in order to get the "full" uri 
   from AsyncWeb request object. Reported by David Rauschenbach.