@@ -20,6 +20,8 @@ Changes log
  - Remove temporarily the WAR support.
  - Added a getTransformer() method to TransformRepresentation to get and customize the underlying XSLT engine. 
    It is currently based on JDK's internal XSLT engine. Suggested by Denis Haskin.
+ - The default name of the application's context logger is now either the canonical application's class name,
+   or "org.restlet.application" for anonymous classes. It allows for a finer filtering of log entries.
 
 [Enhancements] 
  - Enhanced support of Java SE 4.0 via Retrotranslator.
